// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page data should return page data for  Unbundling OOf 1`] = `
"Array [
  Object {
    \\"id\\": \\"Unbundling aid\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"Explore and compare funding priorities for official development assistance\\",
    \\"title\\": \\"Unbundling aid\\",
  },
]"
`;

exports[`Page data should return page data for  Unbundling OOf 2`] = `
"Array [
  Object {
    \\"id\\": \\"Unbundling aid\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"Explore and compare funding priorities for other official flows (OOFs)\\",
    \\"title\\": \\"Unbundling aid\\",
  },
]"
`;

exports[`Page data should return page data for Where The Poor 1`] = `
"Array [
  Object {
    \\"id\\": \\"Unbundling aid\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"Explore and compare funding priorities for other official flows (OOFs)\\",
    \\"title\\": \\"Unbundling aid\\",
  },
]"
`;

exports[`Page data should return page data for a country profile 1`] = `
"Array [
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"introduction\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Explore this in-depth profile of {country} to find out overall levels of poverty, income distribution, division of wealth and more. Discover how national and sub-national revenue is generated\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"overview-ctry-poorest-people\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"HOW MANY OF THE POOREST PEOPLE GLOBALLY LIVE IN {country}?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"overview-ctry-resources\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"WHAT RESOURCES ARE AVAILABLE?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"overview-govt-spentperperson\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"HOW MUCH DOES THE GOVERNMENT SPEND PER PERSON?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"poverty-reduction-ctry\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"IS POVERTY REDUCING OVER TIME?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"poverty-depth-ctry\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"HOW DEEP IS POVERTY?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"income-distribution-ctry\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"HOW IS INCOME DISTRIBUTED?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"popn-ctry\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"WHAT IS THE POPULATION?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"popn-distribution\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"WHAT IS THE URBAN VS RURAL SPLIT?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"popn-distribution-age-ctry\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"WHAT IS THE AGE PROFILE?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"totalrevenue-ctry\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"WHAT IS THE TOTAL REVENUE OF {country}?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"govt-revenue-external\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"HOW MUCH GOVERNMENT REVENUE COMES FROM EXTERNAL GRANTS (AID)?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"ctry-expenditure\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"HOW IS SPENDING ALLOCATED?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"mixture-of-resources\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"WHAT’S THE MIX OF RESOURCES?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"govt-finance-lower\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"How does {country} finance and spend its budget?\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"intl-resources-lower-A1\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"A dynamic mix of resources flow to and from {country}. All resources can play a role in ending poverty, though different resources impact poverty directly and indirectly through different mechanisms and flow for wide-ranging objectives.\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"intl-resources-lower-A2\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"To understand the value of different resources for poverty reduction we must start by understanding the volumes - move the slider to explore how official, commercial, private and illicit resources flow to and from {country}\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"intl-resources-lower-B1\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Where are international resources originating and where are they destined? Start by selecting inflows or outflows:\\",
  },
  Object {
    \\"donor_title\\": \\"\\",
    \\"id\\": \\"avg-income-per-person\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"WHAT IS THE AVERAGE INCOME PER PERSON PER YEAR?\\",
  },
  Object {
    \\"donor_title\\": \\"AS A SHARE OF GNI, HOW MUCH AID DOES {country} ALLOCATE?\\",
    \\"id\\": \\"share-gni-allocated-to-ctry\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"AS A SHARE OF GNI, HOW MUCH AID IS ALLOCATED TO {country}?\\",
  },
  Object {
    \\"donor_title\\": \\"HOW HAVE RESOURCE OUTFLOWS CHANGED OVER TIME?\\",
    \\"id\\": \\"resource-inflow\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"HOW HAVE RESOURCE INFLOWS CHANGED OVER TIME?\\",
  },
]"
`;

exports[`Page data should return page data for about 1`] = `
"Array [
  Object {
    \\"id\\": \\"about-the-development-data-hub\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"ABOUT THE DEVELOPMENT DATA HUB\\",
  },
  Object {
    \\"id\\": \\"the-development-data-hub\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"The Development Data Hub is the most comprehensive online resource for financial and resource flow data alongside poverty, social and vulnerability indicators. It combines an extensive data store with interactive visualisations enabling you to chart, map and compare data at the global, national and local level.\\",
    \\"title\\": \\"The Development Data Hub\\",
  },
  Object {
    \\"id\\": \\"how-does-it-work?\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"It brings together many data sets,enabling you to dig into these through interactive maps, charts and visualisations. It turns complex data around poverty and resource flows into easy to understand robust information and evidence about what is really going on. The Data Hub is an accessible and easy to use tool for anyone wanting to know more about how resources for development are spent.\\",
    \\"title\\": \\"How does it work?\\",
  },
]"
`;

exports[`Page data should return page data for footer 1`] = `
"Array [
  Object {
    \\"id\\": \\"data-blog\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Data blog\\",
  },
  Object {
    \\"id\\": \\"publications\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Publications\\",
  },
  Object {
    \\"id\\": \\"events\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Events\\",
  },
  Object {
    \\"id\\": \\"working-with-us\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Working with us\\",
  },
  Object {
    \\"id\\": \\"quick-links\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Quick Links\\",
  },
  Object {
    \\"id\\": \\"contact-us\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Contact us\\",
  },
  Object {
    \\"id\\": \\"topics\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Topics\\",
  },
  Object {
    \\"id\\": \\"our-consultancy-services\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Our consultancy services\\",
  },
  Object {
    \\"id\\": \\"open-DI-publishing\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Open DI - publishing to IATI\\",
  },
  Object {
    \\"id\\": \\"Newsletter\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Newsletter\\",
  },
  Object {
    \\"id\\": \\"development-Initiatives-newsletter\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Development Initiatives newsletter\\",
  },
  Object {
    \\"id\\": \\"to-receive-regular\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"to receive regular news and updates from DI.\\",
  },
  Object {
    \\"id\\": \\"this-sites-content\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"This sites content is licensed under a\\",
  },
  Object {
    \\"id\\": \\"creative\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International license.\\",
  },
  Object {
    \\"id\\": \\"development-Initiatives\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"© Development Initiatives 2017. Development Initiatives is the trading name of DIInternational Ltd. Registered in England and Wales No. 05802543. DevelopmentInitiatives Poverty Research is the not-for-profit partner of DI International Ltd.Registered in England and Wales No. 06368740. Read our\\",
    \\"title\\": \\"\\",
  },
]"
`;

exports[`Page data should return page data for  page 1`] = `
"Array [
  Object {
    \\"id\\": \\"comprehensive\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"is the most comprehensive source for financial resource flow data alongside poverty,social and vulnerability indicators.\\",
    \\"title\\": \\"comprehensive\\",
  },
  Object {
    \\"id\\": \\"read\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"\\",
    \\"title\\": \\"Read more about the data hub.\\",
  },
]"
`;

exports[`Page data should return page data for the ODA donor bubble chart 1`] = `
"Array [
  Object {
    \\"id\\": \\"resources-able-to-meet-needs\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"The proportion of people living in extreme poverty worldwide has more than halved since 2000, yet progress is varied across countries. Although domestic public resources are an important resource to drive efforts to end poverty, they remain scarce in many countries where poverty is high\\",
    \\"title\\": \\"Are domestic public resources able to meet the needs of the poorest people?\\",
  },
]"
`;

exports[`Page data should return page data for the Poverty bubble chart 1`] = `
"Array [
  Object {
    \\"id\\": \\"resources-able-to-meet-needs\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"The proportion of people living in extreme poverty worldwide has more than halved since 2000, yet progress is varied across countries. Although domestic public resources are an important resource to drive efforts to end poverty, they remain scarce in many countries where poverty is high\\",
    \\"title\\": \\"Are domestic public resources able to meet the needs of the poorest people?\\",
  },
]"
`;

exports[`Page data should return page data for the Unbundling Oda 1`] = `
"Array [
  Object {
    \\"id\\": \\"diff-providers-priorities\\",
    \\"meta\\": \\"\\",
    \\"narrative\\": \\"How effectively are donors targeting the countries with the highest numbers of people in poverty and the least domestic public resources to address it? This chart allows you to select a provider of aid to see how it allocates aid across countries\\",
    \\"title\\": \\"Different providers, different priorities\\",
  },
]"
`;
